test/corpus/fail/suggest-short.mo
=========
suggest-short.mo
=========

import Prim "mo:⛔";

Prim.s;

---

(source_file
  (import
    (var_pat
      (identifier))
    (text_literal))
  (exp_dec
    (dot_exp_object
      (var_exp
        (identifier))
      (identifier))))
